2000-09-11  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-handle-command): Renamed from
	nethack-handle-key and rewritten in preparation for the removal of
	nethack-api-getch in favour of nethack-get-command.
	(nethack-waiting-for-command-flag): renamed from
	nethack-waiting-for-key-p.
	(nethack-command-queue): renamed from nethack-key-queue.

	* nethack-cmd.el: Revived file.  Added a provide line to end.
	Renamed all calls to nethack-send-command to
	nethack-handle-command.

2000-09-07  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-cmd.el: obsolete, removed file from CVS.
	
	* nethack-keys.el: obsolete, removed file from CVS.

	* nethack-api.el (nethack-api-delay-output): implemented.
	(nethack-api-outrip): implemented.
	(nethack-api-wait-synch): implemented.
	(nethack-api-start-menu): implemented.
	(nethack-api-yn-function): implemeneted.

2000-08-20  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-api.el: changed all retvals to 'unimplemented for
	functions that have not been flushed out.

	* nethack.el (nethack-draw-glyph): removed.  handle in nethack-api
	with (nethack-api-print-glyph)
	(nethack-process-send-string): now sends a newline.
	(nethack-create-map-buffer): removed.
	(nethack-create-status-buffer): removed.
	(nethack-create-map-buffer): removed.

	* nethack-api.el: massive reformatting of comments and overall
	file structure.

2000-03-23  Ryan Yeske  <rcyeske@sfu.ca>

	* nethack.el (nethack-program,nethack-program-args): added `*' to
	docstrings to enable interactive setting of vars

	* nethack-keys.el: test added to prevent creating new keymap

	* nethack-api.el (nethack-api-putstr): added missing close paren

2000-03-20  Ryan Yeske  <rcyeske@sfu.ca>

	* nethack.el (nethack-parse-command): added evaluation

2000-03-18  Ryan Yeske  <rcyeske@sfu.ca>

	* nethack-keys.el: renamed some functions, not used yet so no
	details given

	* nethack-cmd.el: renamed some functions, not used yet so no
	details given
